@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	6.9 (gritter) 3/10/06";
+	"@(#)/usr/ucb/otfdump.sl	6.10 (gritter) 3/10/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  6.9 (gritter) 3/10/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 6.9 (gritter) 3/10/06";
+static const char sccsid[] USED = "@(#)dpost.sl  6.10 (gritter) 3/10/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 6.10 (gritter) 3/10/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.9 (gritter) 3/10/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.10 (gritter) 3/10/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.9 (gritter) 3/10/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.10 (gritter) 3/10/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "6.9";
+const char revision[] = "6.10";
 /* SLIST */
 /*
 calloc.c: * Sccsid @(#)calloc.c	1.3 (gritter) 8/26/05
@@ -40,11 +40,11 @@ nroff.d/n10.c: * Sccsid @(#)n10.c	1.22 (gritter) 2/5/06
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.29 (gritter) 3/3/06
 nroff.d/proto.h: * Sccsid @(#)proto.h	1.30 (gritter) 3/3/06
 nroff.d/tw.h: * Sccsid @(#)tw.h	1.5 (gritter) 9/8/05
-troff.d/afm.c: * Sccsid @(#)afm.c	1.46 (gritter) 3/10/06
+troff.d/afm.c: * Sccsid @(#)afm.c	1.47 (gritter) 3/10/06
 troff.d/afm.h: * Sccsid @(#)afm.h	1.25 (gritter) 3/3/06
-troff.d/dev.h: * Sccsid @(#)dev.h	1.9 (gritter) 12/6/05
+troff.d/dev.h: * Sccsid @(#)dev.h	1.10 (gritter) 3/10/06
 troff.d/draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/8/05
-troff.d/makedev.c: * Sccsid @(#)makedev.c	1.11 (gritter) 12/6/05
+troff.d/makedev.c: * Sccsid @(#)makedev.c	1.12 (gritter) 3/10/06
 troff.d/otf.c: * Sccsid @(#)otf.c	1.41 (gritter) 3/3/06
 troff.d/otfdump.c: * Sccsid @(#)otfdump.c	1.11 (gritter) 12/20/05
 troff.d/proto.h: * Sccsid @(#)proto.h	1.38 (gritter) 3/3/06
